# ai_lead_gen

./: .dockerignore  .env.deploy.example  .env.example  .gitignore  README.md  docker-compose.yml
agent/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
agent/src/: backendClient.ts  config.ts  index.ts  piSession.ts  server.ts  tools.ts
agent/tests/: backendClient.test.ts  config.test.ts  piSession.test.ts  server.test.ts  tools.test.ts
backend/: Dockerfile  pyproject.toml
backend/app/: agent_config.py  agent_proxy.py  db.py  email_service.py  main.py  product.py  schemas.py  services.py  web_search.py
backend/tests/: test_api.py  test_product_and_web_search.py  test_services.py
docs/superpowers/plans/: 2026-05-14-overseas-distributor-demo.md  2026-05-14-pi-agent-sidecar.md
docs/superpowers/specs/: 2026-05-14-overseas-distributor-demo-design.md  2026-05-14-pi-agent-sidecar-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  agentProcess.ts  agentSession.ts  markdown.ts  styles.css
frontend/src/components/: InlineMarkdown.vue  MarkdownRenderer.vue
frontend/tests/: agentProcess.test.ts  agentSession.test.ts  markdown.test.ts  styleSystem.test.ts  uiContract.test.ts
scripts/: deploy.sh
skills/overseas-distributor-prospecting/: SKILL.md
tests/: deployment_contract.test.mjs
