[project]
name = "medbot-overseas-distributor-demo"
version = "0.1.0"
description = "FastAPI demo for overseas distributor prospecting workflow."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pypdf>=6.11.0",
    "requests>=2.34.1",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

